--- a/langserve/playground/package.json
+++ b/langserve/playground/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.10",
     "fast-json-patch": "^3.1.1",
     "json-schema-defaults": "^0.4.0",
+    "langchain": "^0.0.169",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
